src/styles.css
/* You can add global styles to this file, and also import other style files */

/* @import url("../node_modules/normalize.css/normalize.css"); */
@import url("assets/css/reset.css");
@import url("../node_modules/bootstrap/dist/css/bootstrap.css");
@import "~@fortawesome/fontawesome-free/css/all.css";

@import "@angular/material/prebuilt-themes/indigo-pink.css";

.animate-colors-transiction {
  transition: color 0.5s, background 0.5s;

}

.theme_start {
  --background-color: #000;
}

.theme_queen {
  --background-color: #FBF1C7;
  --menu-bg-color: #000033;
  --menu-fn-color: #CAAA80;
  --fn-family: 'CrimsonText';
  --fn-color: #000000;
  --card-bg-color: #f9f5d7;
  --text-muted: #6c757d;
  --gain-fn-color: #427b58;
  --lose-fn-color: #cc241d;
  --fn-icon-color: #000;
  --zen-card-border-color: #a9bcd0;
  --zen-card-gain-color: #689d6a;
  --zen-card-gain-archived-color: #000033;
  --zen-card-lose-color: #cc241d;
  --zen-card-lose-archived-color: #000033;
  --zen-card-executed: #c9c9c9;
  --zen-card-stop: #a89984;
  --modal-body: #FBF1C7;
  --page-link-disabled: #fff;
  --list-group-item: #FBF1C7;
  --warning-color: #a89984;
  --input-bg:#fff;
  --input-fn-color: #495057;
  --input-border-primary: #007bff;
  --btn-primary-color: #000033;
  --btn-outline-primary-border: #007bff;
  --btn-primary-border-color: #458588;
  --btn-primary-hover-color: #98971a;
  --btn-primary-hover-border-color: #98971a;
  --btn-outline-primary-border: #458488;
  --btn-primary-diabled-color: #FBF1C7;
  --btn-primary-diabled-border-color: #007bff;
  --btn-secondary-color: #98971a;
  --btn-fn-color: #007bff;
  --link-color: #007bff;

  --blue: #458488;
  --red: #cc241d;
  --purple: #b16286;
  --orange: #d65d0e;
  --yellow: #d79921;
  --green: #98971a;
  --teal: #689d6a;
  --cyan: #83a598;
  --gray: #a89984;
  --gray-dark: #928374;
  --primary: #458588;
  --secondary: #98971a;
  --success: #458488;
  --info: #b8bb26;
  --warning: #d79921;
  --danger: #cc241d;
  --light: #fff;
  --dark: #1d2021;
}

.theme_light {
  --background-color: #FBF1C7;
  --menu-bg-color: #83a598;
  --menu-fn-color: #1d2021;
  --fn-family: 'CrimsonText';
  --fn-color: #1d2021;
  --card-bg-color: #f9f5d7;
  --text-muted: #6c757d;
  --gain-fn-color: #427b58;
  --lose-fn-color: #cc241d;
  --fn-icon-color: #000;
  --zen-card-border-color: #a9bcd0;
  --zen-card-gain-color: #689d6a;
  --zen-card-gain-archived-color: #83a598;
  --zen-card-lose-color: #cc241d;
  --zen-card-lose-archived-color: #83a598;
  --zen-card-executed: #c9c9c9;
  --zen-card-stop: #a89984;
  --modal-body: #FBF1C7;
  --page-link-disabled: #fff;
  --list-group-item: #FBF1C7;
  --warning-color: #a89984;
  --input-bg:#fff;
  --input-fn-color: #495057;
  --input-border-primary: #007bff;
  --btn-primary-color: #458588;
  --btn-outline-primary-border: #007bff;
  --btn-primary-border-color: #458588;
  --btn-primary-hover-color: #98971a;
  --btn-primary-hover-border-color: #98971a;
  --btn-outline-primary-border: #458488;
  --btn-primary-diabled-color: #FBF1C7;
  --btn-primary-diabled-border-color: #007bff;
  --btn-secondary-color: #98971a;
  --btn-fn-color: #212529;
  --link-color: #007bff;

  --blue: #458488;
  --red: #cc241d;
  --purple: #b16286;
  --orange: #d65d0e;
  --yellow: #d79921;
  --green: #98971a;
  --teal: #689d6a;
  --cyan: #83a598;
  --gray: #a89984;
  --gray-dark: #928374;
  --primary: #458588;
  --secondary: #98971a;
  --success: #458488;
  --info: #b8bb26;
  --warning: #d79921;
  --danger: #cc241d;
  --light: #fff;
  --dark: #1d2021;
}

.theme_night {
  --background-color: #1d2021;
  --menu-bg-color: #3c3836;
  --menu-fn-color: #ebdbb2;
  --fn-color: #ebdbb2;
  --fn-family: 'CrimsonText';
  --card-bg-color: #282828;
  --text-muted: #a89984;
  --gain-fn-color: #83a598;
  --lose-fn-color: #fb4934;
  --fn-icon-color: #bdae93;
  --zen-card-border-color: #928374;
  --zen-card-gain-color: #375746;
  --zen-card-gain-archived-color: #3c3836;
  --zen-card-lose-color: #7C0315;
  --zen-card-lose-archived-color: #3c3836;
  --zen-card-executed: #c9c9c9;
  --zen-card-stop: #d79921;
  --modal-body: #1d2021;
  --page-link-disabled: #1d2021;
  --list-group-item: #1d2021;
  --warning-color: #d65d0e;
  --input-bg: #7c6f64;
  --input-fn-color: #ebdbb2;
  --input-border-primary: #7c6f64;
  --btn-primary-color: #458488;
  --btn-primary-border-color: #928374;
  --btn-primary-hover-color: #98971a;
  --btn-primary-hover-border-color: #98971a;
  --btn-outline-primary-border: #83a598;
  --btn-primary-disabled-color: #83a598;
  --btn-primary-disabled-border-color: #83a598;
  --btn-secondary-color: #7c6f64;
  --btn-fn-color: #ebdbb2;
  --link-color: #458588;

  --blue: #458488;
  --red: #cc241d;
  --purple: #b16286;
  --orange: #d65d0e;
  --yellow: #d79921;
  --green: #98971a;
  --teal: #689d6a;
  --cyan: #83a598;
  --gray: #a89984;
  --gray-dark: #928374;
  --primary: #458588;
  --secondary: #98971a; --success: #458488; --info: #b8bb26;
  --warning: #d79921;
  --danger: #cc241d;
  --light: #fbf1c7;
  --dark: #1d2021;
}

@font-face {
  font-family: Monotype;
  src: url("assets/fonts/mononoki-Regular.ttf");
}

@font-face {
  font-family: StardosStencil-Regular;
  src: url("assets/fonts/StardosStencil-Regular.ttf");
}

@font-face {
  font-family: Display;
  src: url("assets/fonts/01 DigitMono.ttf");
}

@font-face {
  font-family: Regular;
  src: url("assets/fonts/Audiowide-Regular.ttf");
}

@font-face {
  font-family: Regular;
  src: url("assets/fonts/KellySlab-Regular.ttf");
}

@font-face {
  font-family: Iceland;
  src: url("assets/fonts/Iceland-Regular.ttf");
}

@font-face {
  font-family: Display;
  src: url("assets/fonts/Orbitron Medium.ttf");
}

@font-face {
  font-family: SpecialElite;
  src: url("assets/fonts/SpecialElite-Regular.ttf");
}

@font-face {
  font-family: Regular;
  src: url("assets/fonts/PlayfairDisplay-VariableFont_wght.ttf");
}

@font-face {
  font-family: CrimsonText;
  src: url("assets/fonts/CrimsonText-Regular.ttf");
}

.align-center {
  margin-top: auto;
  margin-bottom: auto;
}

p{
    margin-top: 0;
    margin-bottom: 0;
}

body {
  font-family: var(--fn-family), Regular;
  /* background: #B5D9D6; */
  font-size: 0.85rem;
  background-color: var(--background-color);
  color: var(--fn-color);
}

.modal-header {
  background-color: var(--menu-bg-color);
  color: var(--menu-fn-color);
  font-weight: bold;
}

.modal-footer {
  background-color: var(--menu-bg-color);
  color: var(--menu-fn-color);
  font-weight: bold;
}


.modal-body {
  background-color: var(--modal-body);
}

.form-control {
  background: var(--input-bg);
  color: var(--input-fn-color);
  border-color: var(--btn-primary-border-color);
}

.form-control:focus {
  background: var(--light);
  color: var(--dark);
  border-color: var(--light);
}

.form-control[readonly] {
  background: var(--btn-primary-diabled-color);
  color: var(--input-fn-color);
  border-color: var(--btn-primary-border-color);
}

.gain-fn-color {
  color: var(--gain-fn-color);
}

.lose-fn-color {
  color: var(--lose-fn-color);
}

.list-group-item.active {
  background-color: var(--menu-bg-color);
  border-color: var(--menu-bg-color);
  color: var(--menu-fn-color);
}

.btn-primary {
  background-color: var(--btn-primary-color);
  border-color: var(--btn-primary-border-color);
}

.btn-primary:hover {
  background-color: var(--btn-primary-hover-color);
  border-color: var(--btn-primary-hover-border-color);
}

.btn-primary:active {
  background-color: var(--btn-primary-hover-color);
  border-color: var(--btn-primary-hover-border-color);
}

.btn-light {
  background-color: var(--light);
  border-color: var(--light);
  color: var(--dark) !important;
}

.input-group-text {
  background-color: var(--light);
  border-color: var(--light);
  color: var(--dark) !important;
}

.btn-primary.disabled, .btn-primary:disabled {
  background-color: var(--btn-primary-disabled-color);
  border-color: var(--btn-primary-disabled-border-color);
  color: var(--fn-color);
}


.btn {
  color: var(--btn-fn-color);
}

.btn-secondary {
  background-color: var(--btn-secondary-color)
}

.btn-outline-primary {
  border-color: var(--btn-outline-primary-border);
}

.btn-link {
  color: var(--link-color);
}

.border-primary {
  border-color: var(--input-border-primary) !important;
}

.card-body {
  background-color: var(--card-bg-color);
}

.text-muted {
  color: var(--text-muted) !important;
}

li.list-group-item {
  background: var(--list-group-item);
}

li.page-item.disabled .page-link {
  background: var(--page-link-disabled);
}

i {
  color: var(--fn-icon-color);
}

.table thead th {
  border-bottom: 2px solid var(--zen-card-border-color);
}

.table th, .table td {
  border-top: 1px solid var(--zen-card-border-color);
}

a {
  color: var(--link-color);
}

